| Summary: | ASTERISK-26823: PJSIP: Persistent subscriptions can cause FRACKs if endpoint does not exist | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2017-02-27 12:42:43.000-0600 | Date Closed: | 2017-02-28 17:15:33.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | 13.14.0 14.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) FRACK.txt | |
| Description: | I ran Asterisk for a little while, and my endpoint (202) created a couple of subscriptions (extension state and MWI). I then shut Asterisk down, adjusted my endpoint options, and restarted Asterisk. Unfortunately, I had typoed an option, and the result was that endpoint 202 did not load at startup. When the persistent subscriptions attempted to be restored, it resulted in FRACK messages. | ||
| Comments: | By: Mark Michelson (mmichelson) 2017-02-27 12:43:29.495-0600 Uploading FRACK.txt This is the CLI output when the FRACKs occurred. Aside from these messages, things seemed to run fine afterward. By: Friendly Automation (friendly-automation) 2017-02-28 17:15:34.620-0600 Change 5098 merged by zuul: res_pjsip_pubsub: Remove unneeded endpoint unref [https://gerrit.asterisk.org/5098|https://gerrit.asterisk.org/5098] By: Friendly Automation (friendly-automation) 2017-02-28 17:29:37.181-0600 Change 5099 merged by zuul: res_pjsip_pubsub: Remove unneeded endpoint unref [https://gerrit.asterisk.org/5099|https://gerrit.asterisk.org/5099] By: Friendly Automation (friendly-automation) 2017-02-28 17:33:28.079-0600 Change 5100 merged by Joshua Colp: res_pjsip_pubsub: Remove unneeded endpoint unref [https://gerrit.asterisk.org/5100|https://gerrit.asterisk.org/5100] | ||